# QwenMine

./: .gitignore  ARCHITECTURE.md  BUGFIXS.md  CMakeLists.txt  README.md  TASKLIST.md
backend/: Board.cpp  Board.h  Cell.cpp  Cell.h  Game.cpp  Game.h
frontend/: BoardView.cpp  BoardView.h  GameWindow.cpp  GameWindow.h
src/: main.cpp
tests/: CMakeLists.txt
tests/unit/: main.cpp
